@@ -4,6 +4,7 @@
    requirements of datatype.
  - Add MediainfoStatement datatype. There is difference between normal
    Statement in use of Snak and references.
+ - Add id parameter and id() method to Statement.
  - Fix doc of Datatype.
  - Fix tests for Snak (there isn't datavalue for somevalue and novalue).
  - Improve doc example for Snak by adding of snaktype.
